@@ -6,6 +6,10 @@ This file describes the changes to the Log for C++ library. See the CVS reposito
 
 	* src/Log4cppCleanup.cpp: set variable to NULL after delete. 
 	(feature request #527393)
+
+	* include/log4cp/Category.hh, include/log4cpp/FixedContextCategory.hh,
+	src/Category.hh, src/Category.cpp: added getAllAppenders() method.
+	(feature request #527381)
  
 2002-03-17 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
 	* tests/testbench.cpp: added missing 'std::' specifiers. (bug #530332)
